# hazelcast-cpp-client

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  404.html  Array.h  BufferObjectDataInput.h  BufferObjectDataOutput.h  ByteArray.h  CLAUDE.md  CMakeLists.txt  CharArray.h  ClassDefinition.cpp  ClassDefinition.h  ClassDefinitionImpl.cpp  ClassDefinitionImpl.h  ClassDefinitionWriter.cpp  ClassDefinitionWriter.h  Client.h  Closeable.h  ConstantSerializers.h  ContextAwareDataInput.cpp  ContextAwareDataInput.h  ContextAwareDataOutput.cpp  ContextAwareDataOutput.h  CustomClass.h  Data.cpp  Data.h  DataInput.cpp  DataInput.h  DataOutput.cpp  DataOutput.h  DataSerializable.h  DefaultPortableReader.cpp  DefaultPortableReader.h  DefaultPortableWriter.cpp  DefaultPortableWriter.h  DoubleArray.h  Doxyfile  (+94 more)
examples/: CMakeLists.txt  README.md  TestApp.cpp  client.bat  client.sh  readme.md
examples/CommandLineTool/: CMakeLists.txt  CommandLineTool.cpp  run-commandline.sh
examples/Org.Website.Samples/: AtomicLongSample.cpp  CMakeLists.txt  CustomSerializerSample.cpp  DistributedLockSample.cpp  DistributedMapSample.cpp  DistributedMultiMapSample.cpp  DistributedTopicSample.cpp  EntryProcessorSample.cpp  ExecutorSample.cpp  GlobalSerializerSample.cpp  IdentifiedDataSerializableSample.cpp  ListSample.cpp  LockSample.cpp  MapSample.cpp  MultiMapSample.cpp  PortableSerializableSample.cpp  QuerySample.cpp  QueueSample.cpp  ReplicatedMapSample.cpp  RingBufferReaderSample.cpp  RingBufferSample.cpp  RingBufferWriterSample.cpp  SetSample.cpp  TopicSample.cpp
examples/adaptor/: CMakeLists.txt  RawList.cpp  RawMap.cpp  RawMultiMap.cpp  RawQueue.cpp  RawSet.cpp  RawTransactionalMap.cpp  RawTransactionalMultiMap.cpp  RawTransactionalQueue.cpp  run-rawlist.sh  run-rawmap.sh  run-rawmultimap.sh  run-rawqueue.sh  run-rawset.sh  run-txmap.sh  run-txmultimap.sh  run-txqueue.sh
examples/authentication/: CMakeLists.txt  README.md  hazelcast-token-credentials.xml  hazelcast-username-password.xml  token_authentication.cpp  username_password_authentication.cpp
examples/aws/: AwsClientWithKey.cpp  AwsClientWithNoKeyNoIAMRoleInsideAws.cpp  AwsClientWithNoKeyWithIAMRoleInsideAws.cpp  CMakeLists.txt
examples/backpressure/: CMakeLists.txt  EnableBackPressure.cpp  README.md  hazelcast-backpressure.xml
examples/client-statistics/: CMakeLists.txt  ClientStatistics.cpp  README.md  hazelcast-management-center-enabled.xml
examples/cloud-discovery/: CMakeLists.txt  connect-cloud.cpp  ssl-connect-cloud.cpp
examples/command-line-tool/: CMakeLists.txt  CommandLineTool.cpp
examples/cp/: CMakeLists.txt  README.md  atomic_long.cpp  atomic_reference.cpp  counting_semphore.cpp  fenced_lock.cpp  latch.cpp
examples/distributed-collections/: CMakeLists.txt
examples/distributed-collections/blockingqueue/: CMakeLists.txt  Consumer.cpp  Producer.cpp  README.md  run-consumer.sh  run-producer.sh
examples/distributed-collections/itemlisteners/: CMakeLists.txt  CollectionChanger.cpp  ItemListener.cpp  README.md  item_listener.cpp  readme.md  run-changer.sh  run-listener.sh
examples/distributed-collections/list/: CMakeLists.txt  README.md  Reader.cpp  Writer.cpp  run-reader.sh  run-writer.sh
examples/distributed-collections/ringbuffer/: CMakeLists.txt  CustomPolymorphicRb.cpp  DataPolymorphicRb.cpp  DataSerializablePolymorphicRingbuffer.cpp  README.md  RingbufferAsyncApi.cpp  RingbufferExample.cpp  run-ringbuffer.sh
examples/distributed-collections/set/: CMakeLists.txt  README.md  Reader.cpp  Writer.cpp  run-reader.sh  run-writer.sh
examples/distributed-executor-service/: README
examples/distributed-map/: CMakeLists.txt
examples/distributed-map/async-api/: CMakeLists.txt  main.cpp
examples/distributed-map/basic/: CMakeLists.txt  FillMap.cpp  PrintAll.cpp  README.md  run-fillmap.sh  run-printall.sh
examples/distributed-primitives/: CMakeLists.txt
examples/distributed-topic/: CMakeLists.txt
examples/event-properties/: CMakeLists.txt  SetEventThreadCountAndMaxQueueSize.cpp
examples/external-smart-client-discovery/: CMakeLists.txt  README.md  connect-external-client.cpp
examples/invocation-timeouts/: CMakeLists.txt  SetInvocationTimeouts.cpp
examples/learning-basics/: CMakeLists.txt
examples/monitoring/: CMakeLists.txt
examples/monitoring/cluster/: main.cpp  (+2 more)
examples/network-configuration/: CMakeLists.txt
examples/performance-test/: CMakeLists.txt
examples/pipeline/: CMakeLists.txt  PipeliningDemo.cpp
examples/replicated-map/: CMakeLists.txt
examples/serialization/: CMakeLists.txt
examples/soak-test/: CMakeLists.txt  README.md  SimplePerformanceTest.cpp  SoakTest.cpp  soak_test.cpp
examples/spi/: CMakeLists.txt
examples/sql/: CMakeLists.txt  README  hazelcast-sql.xml  sql_advanced_query_options.cpp  sql_basic_query.cpp  sql_cancellation_example.cpp  sql_json_example.cpp  sql_order_by_limit_offset.cpp  sql_page_iterator_sync.cpp  sql_query_with_portable.cpp  sql_row_iterator_sync.cpp  sql_training.cpp
examples/tls/: BasicTLSClient.cpp  CMakeLists.txt  mutual_authentication.cpp
examples/transactional-queue-benchmark/: CMakeLists.txt  README.md  consumer.cpp  feeder.cpp
examples/transactions/: CMakeLists.txt
hazelcast/test/: ByteBufferTest.cpp  ByteBufferTest.h  CMakeLists.googletest.in  CMakeLists.txt  ClientListTest.h  ClientLockTest.h  ClientMultiMapTest.h  ClientSetTest.h  ClientTestSupport.h  ClientTopicTest.h  CppUnitSample.h  HazelcastInstance.cpp  HazelcastInstance.h  HazelcastInstanceFactory.cpp  HazelcastInstanceFactory.h  HazelcastServer.cpp  HazelcastServer.h  HazelcastServerFactory.cpp  HazelcastServerFactory.h  README.md  SimpleMapTest.h  TestDataSerializable.h  TestHelperFunctions.h  TestInnerPortable.h  TestInvalidReadPortable.h  TestInvalidWritePortable.h  TestMainPortable.h  TestNamedPortable.h  TestNamedPortableV2.h  TestPortableFactory.h  TestPortableFactory2.h  TestRawDataPortable.h  deneme.cpp  deneme.h  iTestFixtureSample.h  main.cpp  mapTest.h  portableTest.h  serializationTest.h  testUtil.h  (+1 more)
sample_project/: CMakeLists.txt  client.cpp
(+15082 files in other folders)
