#
# Copyright (c) 2008-2018, Hazelcast, Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
add_executable(AtomicLongSample ./AtomicLongSample.cpp)
add_executable(DistributedLockSample ./DistributedLockSample.cpp)
add_executable(DistributedMapSample ./DistributedMapSample.cpp)
add_executable(DistributedMultiMapSample ./DistributedMultiMapSample.cpp)
add_executable(DistributedTopicSample ./DistributedTopicSample.cpp)
add_executable(EntryProcessorSample ./EntryProcessorSample.cpp)
add_executable(QuerySample ./QuerySample.cpp)
add_executable(QueueSample ./QueueSample.cpp)
add_executable(RingBufferReaderSample ./RingBufferReaderSample.cpp)
add_executable(RingBufferWriterSample ./RingBufferWriterSample.cpp)
