#
# Copyright (c) 2008-2022, Hazelcast, Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
add_subdirectory(basic)
add_subdirectory(near-cache)
add_subdirectory(query)
add_subdirectory(custom-attributes)
add_subdirectory(entry-listener)
add_subdirectory(entry-processor)
add_subdirectory(eviction)
add_subdirectory(index)
add_subdirectory(locking)
add_subdirectory(map-interceptor)
add_subdirectory(multimap)
add_subdirectory(partitionaware)
add_subdirectory(removeAll)
